--- a/releases/example-release/tracklist.jspf
+++ b/releases/example-release/tracklist.jspf
@@ -1,22 +1,22 @@
 {
   "playlist": {
-    "title"         : "Cosmic Voyage",
-    "creator"       : "zirafa",
+    "title"         : "Eve Of Destruction",
+    "creator"       : "Maslow's Basement",
     "track"         : [
         {
-          "location"      : ["releases/example-release/juno-pulse.mp3"], 
-          "title"         : "Juno Pulse",
-          "creator"       : "Jesse Pash"
+          "location"      : ["releases/example-release/01Been Ballin - Proto1.mp3.mp3"], 
+          "title"         : "Been Ballin",
+          "creator"       : "Maslow's Basement"
         },
         {
-          "location"      : ["releases/example-release/flying-guitar.mp3"], 
-          "title"         : "Flying Guitar",
-          "creator"       : "Guitarz1970"
+          "location"      : ["releases/example-release/02Memorial Day 2018.mp3"], 
+          "title"         : "Memorial Day 2018",
+          "creator"       : "Maslow's Basement"
         },
         {
-          "location"      : ["releases/example-release/minimoog-bass.mp3"], 
-          "title"         : "Minimoog Bass",
-          "creator"       : "Garzul"
+          "location"      : ["releases/example-release/04Thunder 1.4.mp3"], 
+          "title"         : "Thunder",
+          "creator"       : "Maslow's Basement"
         }            
       ]
   }
