--- a/releases/eveOfDestruction/tracklist.jspf
+++ b/releases/eveOfDestruction/tracklist.jspf
@@ -4,17 +4,17 @@
     "creator"       : "Maslow's Basement",
     "track"         : [
         {
-          "location"      : ["releases/example-release/01Been Ballin - Proto1.mp3.mp3"], 
+          "location"      : ["releases/example-release/01BeenBallin.mp3"], 
           "title"         : "Been Ballin",
           "creator"       : "Maslow's Basement"
         },
         {
-          "location"      : ["releases/example-release/02Memorial Day 2018.mp3"], 
+          "location"      : ["releases/example-release/02MemorialDay2018.mp3"], 
           "title"         : "Memorial Day 2018",
           "creator"       : "Maslow's Basement"
         },
         {
-          "location"      : ["releases/example-release/04Thunder 1.4.mp3"], 
+          "location"      : ["releases/example-release/04Thunder1.4.mp3"], 
           "title"         : "Thunder",
           "creator"       : "Maslow's Basement"
         }            
